# MA-

./: .gitignore  .replit  CSV_UPLOAD_TROUBLESHOOTING.md  DEPLOYMENT.md  EMAIL_TEST_STEPS.md  HOSTING_OPTIONS.md  PRODUCTION_DEPLOY_PROPOSAL.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOY_VIA_CLI.md  RAILWAY_FIX_USERS_TABLE.md  RAILWAY_GIT_SETUP.md  RAILWAY_NEW_PROJECT_STEPS.md  RAILWAY_SET_VARIABLES.md  RESTORE_DESIGN.md  SENDGRID_SETUP.md  pyproject.toml  railway.json  render.yaml  replit.md  sample_leads.csv  sample_leads_edge_cases.csv  sample_leads_with_grade.csv  メール送信方法.md
alembic/: env.py
alembic/versions/: 045d801f097e_add_graduation_year_source_column_to_.py  5683389a6789_add_segment_event_status_in_to_scenarios.py  6c56a7154fb1_initial_migration_with_all_models.py  9b87b08ba3f6_add_line_messaging_support.py  a1b2c3d4e5f6_add_calendar_events_and_registrations.py  add_password_hash_to_users.py  (+6 more)
attached_assets/: Pasted--FastAPI-Jinja-HTMX-LINE-MA-FastAPI-PostgreSQL-SQLAlche_1766565521747.txt  Pasted--MA-FastAPI-Jinja-SQLAlchemy-Alembic-APScheduler--17693_1769350809367.txt  Pasted--MA-FastAPI-Jinja-SQLAlchemy-Alembic-APScheduler-CSV--1_1771570392087.txt  Pasted--MA-FastAPI-Jinja-SQLAlchemy-Alembic-APScheduler-UI--17_1769351939088.txt  Pasted--MA-OC-UI-FastAPI-Jinja--1768819532440_1768819532441.txt  Pasted--MA-PM-CSV--1766380718320_1766380718321.txt  Pasted--MA-PoC-Replit-Preview-MA--1767065018023_1767065018024.txt  data_20251226131143_1768822377087.csv
sample_data/: sample_leads.csv
scripts/: generate-secrets.sh  reset_user_password.py  start.sh
(+98 files in other folders)
